test_data/unit/stack/test_app_vpc/test_app_vpc_stack_actual/production/expected.json
{
  "Resources": {
    "NateNiteProductionAppVpcAppVpc1493CC1E": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.57.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ]
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1Subnet57A88E58": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1RouteTable54D2F3B2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1RouteTableAssociation03140CF6": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1RouteTable54D2F3B2"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1Subnet57A88E58"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1DefaultRouteB53133A3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NateNiteProductionAppVpcAppVpcIGW8928C49D"
        },
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1RouteTable54D2F3B2"
        }
      },
      "DependsOn": [
        "NateNiteProductionAppVpcAppVpcVPCGW16CEC3EE"
      ]
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1EIP3713C5A3": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet1"
          }
        ]
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1NATGatewayCC28994E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1EIP3713C5A3",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1Subnet57A88E58"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1DefaultRouteB53133A3",
        "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1RouteTableAssociation03140CF6"
      ]
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2Subnet33539D09": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2RouteTable046F0525": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2RouteTableAssociation7D1DF9CE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2RouteTable046F0525"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2Subnet33539D09"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2DefaultRoute92377079": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NateNiteProductionAppVpcAppVpcIGW8928C49D"
        },
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2RouteTable046F0525"
        }
      },
      "DependsOn": [
        "NateNiteProductionAppVpcAppVpcVPCGW16CEC3EE"
      ]
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2EIP37E085FF": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet2"
          }
        ]
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2NATGatewayD2CBB738": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2EIP37E085FF",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2Subnet33539D09"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_publicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2DefaultRoute92377079",
        "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2RouteTableAssociation7D1DF9CE"
      ]
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1RouteTable4DE7528D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1RouteTableAssociation0D22F3D2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1RouteTable4DE7528D"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1DefaultRoute25F6ADAA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet1NATGatewayCC28994E"
        },
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1RouteTable4DE7528D"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2RouteTable9BE2E85F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2RouteTableAssociation19E5FC36": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2RouteTable9BE2E85F"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2DefaultRoute1A6C3F6E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcpublicSubnet2NATGatewayD2CBB738"
        },
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2RouteTable9BE2E85F"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet1Subnet95914443": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet1RouteTable544014E3": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet1RouteTableAssociation8281A69F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet1RouteTable544014E3"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet1Subnet95914443"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet2Subnet41A17BFD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.57.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "natenite-production-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet2RouteTable98E0407E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/natenite-production-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet2RouteTableAssociation3DB9F403": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet2RouteTable98E0407E"
        },
        "SubnetId": {
          "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcisolatedSubnet2Subnet41A17BFD"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcIGW8928C49D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ]
      }
    },
    "NateNiteProductionAppVpcAppVpcVPCGW16CEC3EE": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NateNiteProductionAppVpcAppVpcIGW8928C49D"
        },
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcEC2SecurityGroupE5577F19": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/EC2/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcEC2F83EDA97": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcEC2SecurityGroupE5577F19",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcEC2MESSAGESSecurityGroupC42F1F48": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/EC2_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcEC2MESSAGES54416F44": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcEC2MESSAGESSecurityGroupC42F1F48",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2messages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSSMSecurityGroup08B00E22": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/SSM/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSSME0978EB2": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcSSMSecurityGroup08B00E22",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSSMMESSAGESSecurityGroup830F9712": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/SSM_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSSMMESSAGES9E0276E2": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcSSMMESSAGESSecurityGroup830F9712",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssmmessages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSECRETSMANAGERSecurityGroup0B233731": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/SECRETS_MANAGER/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcSECRETSMANAGER77462DB9": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcSECRETSMANAGERSecurityGroup0B233731",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECSAGENTSecurityGroup16737445": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/ECS_AGENT/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECSAGENTD7EC945A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcECSAGENTSecurityGroup16737445",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECSSecurityGroup56A6FDD3": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/ECS/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECS2A53D834": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcECSSecurityGroup56A6FDD3",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECSTELEMETRYSecurityGroup6FC5C177": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NateNiteProductionAppVpcStack/NateNiteProductionAppVpcAppVpc/ECS_TELEMETRY/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NateNiteProductionAppVpcAppVpc1493CC1E",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NateNiteProductionAppVpcAppVpc1493CC1E",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcAppVpcECSTELEMETRY448EA3EC": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NateNiteProductionAppVpcAppVpcECSTELEMETRYSecurityGroup6FC5C177",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet1Subnet0618514A"
          },
          {
            "Ref": "NateNiteProductionAppVpcAppVpcnateniteproductionappvpcprivateSubnet2Subnet24B773FB"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "natenite-production-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
        }
      }
    },
    "NateNiteProductionAppVpcPrivateR53Zone6C96F912": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "production.internal.natenite.net.",
        "VPCs": [
          {
            "VPCId": {
              "Ref": "NateNiteProductionAppVpcAppVpc1493CC1E"
            },
            "VPCRegion": {
              "Ref": "AWS::Region"
            }
          }
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
